--- a/format.css
+++ b/format.css
@@ -21,7 +21,7 @@ p
 {
     font-size: 1em;
 }
-h1, h2, h3, h4, p, h5
+h1, h2, h3, h4, p, h5, a
 {
     font-family: 'Jockey One', sans-serif;
 }
@@ -102,7 +102,85 @@ body {
 	transition: all .3s linear;
 }
 
-.tint h1, .tint h3, .tint button{
+.tint h1, .tint h3, .tint a, .tint button{
   position: relative;
 	z-index: 1000000;
+}
+.buttons{
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  padding-left: 0;
+}
+.buttons button{
+  display: inline-block;
+  position: relative;
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 20px 30px;
+  background: rgba(0,0,0,0.09);
+}
+span{
+  display: block;
+  padding: 25px 80px;
+}
+.buttons button::before, button::after{
+  content:"";
+  width: 0;
+  height: 2px;
+  position: absolute;
+  transition: all 0.2s linear;
+  background: #fff;
+}
+
+span::before, span::after{
+  content:"";
+  width:2px;
+  height:0;
+  position: absolute;
+  transition: all 0.2s linear;
+  background: #fff;
+}
+.buttons button:hover::before, button:hover::after{
+  width: 100%;
+}
+.buttons button:hover span::before, button:hover span::after{
+  height: 100%;
+}
+
+/*----- button 6 -----*/
+.btn-6::before{
+  left: 50%;
+  top: 0;
+  transition-duration: 0.4s;
+}
+.btn-6::after{
+  left: 50%;
+  bottom: 0;
+  transition-duration: 0.4s;
+}
+.btn-6 span::before{
+  left: 0;
+  top: 50%;
+  transition-duration: 0.4s;
+}
+.btn-6 span::after{
+  right: 0;
+  top: 50%;
+  transition-duration: 0.4s;
+}
+.btn-6:hover::before, .btn-6:hover::after{
+  left: 0;
+}
+.btn-6:hover span::before, .btn-6:hover span::after{
+  top: 0;
 }
