--- a/format.css
+++ b/format.css
@@ -54,6 +54,7 @@ body {
     width: 100%;
     max-height: 50%;
     padding: 0;
+    margin-bottom: -5px;
 }
 #heroVideo {
     right: 0;
@@ -100,6 +101,7 @@ body {
 	right: 0;
 	background: rgba(0,0,0, 0.6);
 	transition: all .3s linear;
+  margin-bottom: 5px;
 }
 
 .tint h1, .tint h3, .tint a, .tint button{
