--- a/format.css
+++ b/format.css
@@ -21,7 +21,7 @@ p
 {
     font-size: 1em;
 }
-h1, h2, h3, h4, p, h5, a
+h1, h2, h3, h4, p, h5, a, span
 {
     font-family: 'Jockey One', sans-serif;
 }
@@ -40,13 +40,6 @@ body {
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-}
-.navButton:hover{
-    background-color: black;
-    color: #dadfe1;
-    transition: all .3s linear;
-    border: 2px solid transparent;
-
 }
 #hero{
     display:inline-block;
@@ -130,6 +123,7 @@ body {
   cursor: pointer;
   margin: 20px 30px;
   background: rgba(0,0,0,0.09);
+  /* width: 20%; */
 }
 span{
   display: block;
@@ -140,7 +134,6 @@ span{
   width: 0;
   height: 2px;
   position: absolute;
-  color: yellow;
   background: #fff;
 }
 
@@ -185,4 +178,151 @@ span::before, span::after{
 }
 .btn-6:hover span::before, .btn-6:hover span::after{
   top: 0;
+}
+
+/* CSS for hero button */
+.buttonsTop{
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  padding-left: 0;
+  background-color: transparent;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+.buttonsTop button{
+  display: inline-block;
+  position: relative;
+  background: none;
+  border: none;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 20px 30px;
+  background: rgba(0,0,0,0.09);
+}
+span{
+  display: block;
+  padding: 25px 80px;
+}
+.buttonsTop button::before, button::after{
+  content:"";
+  width: 0;
+  height: 2px;
+  position: absolute;
+  background: #fff;
+}
+
+span::before, span::after{
+  content:"";
+  width:2px;
+  height:0;
+  position: absolute;
+  transition: all 0.2s linear;
+  background: #fff;
+}
+.buttonsTop button:hover::before, button:hover::after{
+  width: 100%;
+}
+.buttonsTop button:hover span::before, button:hover span::after{
+  height: 100%;
+}
+.headSpan span{
+
+}
+
+/* start of mobile css. only put mobile css below this */
+
+@media(max-width:1000px)
+{
+  .buttons button{
+    display: inline-block;
+    position: relative;
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+    padding: 10px 24px;
+    background: rgba(0,0,0,0.09);
+    width: 30%;
+    float: left;
+  }
+  .buttons span{
+    display: block;
+    padding: 25px;
+    font-size: 1rem;
+  }
+  .headSpan{
+    display: block;
+    padding: 30px;
+    margin: 0 auto;
+    font-size: 1rem;
+  }
+
+}
+
+@media(max-width:700px)
+{
+  .buttons button{
+    display: inline-block;
+    position: relative;
+    background: none;
+    border: none;
+    font-size: 1rem;
+    color: #fff;
+    cursor: pointer;
+    padding: 10px 24px;
+    background: rgba(0,0,0,0.09);
+    width: 30%;
+    float: left;
+    margin: 5px;
+  }
+  .buttons span{
+    display: block;
+    font-size: 1rem;
+    padding: 0;
+  }
+  h1
+  {
+      font-size:  2.827em ;
+  }
+  h2
+  {
+      font-size: 1.999em ;
+  }
+  h3
+  {
+      font-size: 1.414em ;
+  }
+  h4{
+      font-size:  1.21em ;
+  }
+}
+@media(max-width:500px)
+{
+  .headSpan{
+    display: block;
+    padding: 10px 0 10px 0;
+    margin: 0 auto;
+    font-size: 1rem;
+  }
+}
+@media(max-width:300px)
+{
+  .buttons span{
+    display: block;
+    font-size: .7rem;
+    padding: 0;
+  }
 }
