--- a/format.css
+++ b/format.css
@@ -1,3 +1,26 @@
+.ml9 {
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.ml9 .text-wrapper {
+  position: relative;
+  display: inline-block;
+  padding-top: 0.2em;
+  padding-right: 0.05em;
+  padding-bottom: 0.1em;
+  overflow: hidden;
+}
+
+.ml9 .letter {
+  transform-origin: 50% 100%;
+  display: inline-block;
+  line-height: 1em;
+}
+
+
 h1
 {
     font-size:  3.998em ;
@@ -125,7 +148,7 @@ body {
   background: rgba(0,0,0,0.09);
   /* width: 20%; */
 }
-span{
+.buttons span{
   display: block;
   padding: 25px 80px;
 }
@@ -211,7 +234,7 @@ span::before, span::after{
   margin: 20px 30px;
   background: rgba(0,0,0,0.09);
 }
-span{
+.buttons span{
   display: block;
   padding: 25px 80px;
 }
